	herds_xml class which will eventually replace herds_xml_T and
	herdsXMLHandler_T.
	* herdstat/portage/metadata_xml.cc, herdstat/portage/metadata_xml.hh:
	Added metadata_xml class which will eventually replace metdata_xml_T
	and metdataXMLHandler_T.
	* herdstat/portage/devaway_xml.cc, herdstat/portage/devaway_xml.hh:
	Added devaway_xml class which will eventually replace devaway_T.

2005-09-05 Aaron Walker <ka0ttic@gentoo.org>

	* tags/release-1.1.1_p7: copied from tags/release-1.1.1_p6 and major
	bug-fixes applied for release.  See NEWS for 1.1.1_p7 to see included
	fixes.

	* herdstat/xml/Makefile.am, herdstat/xml/init.cc,
	herdstat/xml/init.hh, herdstat/xml/document.hh,
	herdstat/xml/saxparser.cc, herdstat/xml/saxparser.hh, src/xml.hh,
	src/xmlparser.cc, src/xmlparser.hh: Moved XML-specific code into its
	own convenience lib.

2005-09-04 Aaron Walker <ka0ttic@gentoo.org>

	* herdstat/util/file.cc, herdstat/util/file.hh: Cleaned up file
	classes.  They are no longer naughty and inherit from std containers.
	* herdstat/util/vars.cc, herdstat/util/vars.hh: removed
	ebuild-specific portions of code.  Instead I've added a virtual
	function set_defaults() so that vars_T derivatives can set default
	variables/values before the file is read.
	* herdstat/util/progress.cc, herdstat/util/progress.hh,
	herdstat/util/glob.cc, herdstat/util/glob.hh, herdstat/util/timer.cc,
	herdstat/util/timer.hh:
	Add source files for glob.hh, progress.hh, and timer.hh, separating
	interface from implementation.
	* herdstat/portage/misc.cc, herdstat/portage/misc.hh: inline the
	small one liner functions.
	* herdstat/portage/ebuild.cc, herdstat/portage/ebuild.hh: Added new
	ebuild_T type, a vars_T derivative that overrides set_defaults() in
	order to set ${PN}, ${P}, ${PV}, etc.
	* src/metadata.cc, src/action_meta_handler.cc: Update to use new
	ebuild_T instead of vars_T.  Also fixed a bug in cases where there's
	no HOMEPAGE or <longdescription>/DESCRIPTION specified; in --quiet