@@ -14,3 +14,5 @@ portdir/app-misc/foo/foo-1.10.ebuild
 portdir/app-misc/foo/foo-1.2.ebuild
 portdir/sys-ignore/fefifofum/fefifofum-0.1_pre99.ebuild
 portdir/sys-libs/libfoo/libfoo-1.9.ebuild
+
+The pattern '*foo-1.10*' appears 4 times in the output above.
